--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "qs": "^6.9.4",
     "vue": "^2.6.10",
     "vue-cookies": "^1.7.3",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.3.2"
   },
   "devDependencies": {
