--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue": "^2.6.10",
     "vue-cookies": "^1.7.3",
     "vue-lazyload": "^1.3.3",
-    "vue-router": "^3.3.2"
+    "vue-router": "^3.3.2",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
